fixed gallery so there is no white spaces and added kofi donation page

--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -1,13 +1,31 @@
 .row {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  margin: 10px;
+  margin: 0 4px;
 }
 
-@media screen and (min-width:600px) {
-  .row {
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(500px, 1fr))
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
   }
 }
